# projects

HealthMonitor/: .gitignore  README.md  health_connect_delta_loader.py
projects/JobBots/: .gitignore  README.md
projects/JobBots/jobbot-eng-ind/: README.md  pyproject.toml
projects/JobBots/jobbot-eng-ind/config/: example-config.json  jobbot-eng-ind.cron
projects/JobBots/jobbot-eng-ind/config/systemd/: jobbot-eng-ind.service  jobbot-eng-ind.timer
projects/JobBots/jobbot-eng-ind/data/: example-vacancies.json
projects/JobBots/jobbot-eng-ind/docs/: ARCHITECTURE.md  USAGE.md  runbook.md
projects/JobBots/jobbot-eng-ind/prompts/: jobbot-eng-ind-search.md
projects/JobBots/jobbot-eng-ind/schemas/: vacancies.schema.json
projects/JobBots/jobbot-eng-ind/scripts/: run_jobbot_eng_ind.sh  run_jobbot_eng_ind_multipass.sh  run_scheduled_jobbot_eng_ind.sh  run_scheduled_jobbot_eng_ind_wait_lock.sh  send_report_via_codex_gmail.sh  smoke_test.sh
projects/JobBots/jobbot-eng-ind/src/: drive_store.py  fetch_public_sources.py  jobbot_eng_ind.py  merge_vacancies.py  send_gmail.py  upload_run_to_drive.py  validate_and_rank.py
projects/JobBots/jobbot-eng-ind/src/jobbot_eng_ind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
projects/JobBots/jobbot-nrw/: README.md  pyproject.toml
projects/JobBots/jobbot-nrw/automation/: README.md  automation.toml
projects/JobBots/jobbot-nrw/docs/: runbook.md
projects/JobBots/jobbot-nrw/src/: drive_store.py  upload_run_to_drive.py
