[project]
name = "jobbot-eng-ind"
version = "0.1.0"
description = "Manual English-friendly indexed job-search bot."
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.170.0",
  "google-auth>=2.40.0",
  "google-auth-oauthlib>=1.2.0"
]

[project.scripts]
jobbot-eng-ind = "jobbot_eng_ind:main"
jobbot-eng-ind-validate = "validate_and_rank:main"

[tool.ruff]
line-length = 120
