[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobbot-eng-ind"
version = "0.1.0"
description = "Manual English-friendly indexed job-search bot."
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.170.0",
  "google-auth>=2.40.0",
  "google-auth-oauthlib>=1.2.0"
]

[project.scripts]
jobbot-eng-ind = "jobbot_eng_ind:main"
jobbot-eng-ind-validate = "validate_and_rank:main"

[tool.setuptools]
py-modules = [
  "drive_store",
  "jobbot_eng_ind",
  "send_gmail",
  "upload_run_to_drive",
  "validate_and_rank"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 120
